--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,8 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 1rem;
+  gap: 0.625rem;
+  font-weight: 500;
 }
 
 .main-block__title::before {
@@ -177,6 +178,7 @@ h6 {
 }
 
 .main-block__text {
+  font-weight: 300;
   max-width: 46.875rem;
   margin: 0 auto;
   line-height: 137%;
@@ -195,9 +197,19 @@ h6 {
   position: relative;
 }
 
+.item-main-block__content {
+  display: block;
+}
+
 .item-main-block__image-ibg {
   padding-bottom: 162.5%;
   position: relative;
+  overflow: hidden;
+}
+
+.item-main-block__image-ibg img {
+  -webkit-transition: all 0.8s ease 0s;
+  transition: all 0.8s ease 0s;
 }
 
 .item-main-block__image-ibg::before {
@@ -225,14 +237,12 @@ h6 {
   color: #fff;
   font-size: 0.875rem;
   line-height: 142%;
+  margin-bottom: 0.5rem;
 }
 
 .item-main-block__name span {
   line-height: 116%;
-}
-
-.item-main-block__name:not(:last-child) {
-  margin-bottom: 1rem;
+  display: block;
 }
 
 .item-main-block__button {
@@ -276,7 +286,7 @@ h6 {
   }
 
   .main-block__title::before {
-    height: 0.25rem;
+    height: 0.1875rem;
   }
 
   .main-block__title::before {
@@ -398,15 +408,15 @@ h6 {
     }
 }
 
-@supports (height: clamp( 0.125rem , 0.0678571429rem  +  0.2857142857vw , 0.25rem )) {
+@supports (height: clamp( 0.125rem , 0.0964285714rem  +  0.1428571429vw , 0.1875rem )) {
     .main-block__title::before {
-      height: clamp( 0.125rem , 0.0678571429rem  +  0.2857142857vw , 0.25rem );
+      height: clamp( 0.125rem , 0.0964285714rem  +  0.1428571429vw , 0.1875rem );
     }
 }
 
-@supports not (height: clamp( 0.125rem , 0.0678571429rem  +  0.2857142857vw , 0.25rem )) {
+@supports not (height: clamp( 0.125rem , 0.0964285714rem  +  0.1428571429vw , 0.1875rem )) {
     .main-block__title::before {
-      height: calc(0.125rem + 0.125 * (100vw - 20rem) / 43.75);
+      height: calc(0.125rem + 0.0625 * (100vw - 20rem) / 43.75);
     }
 }
 
@@ -493,4 +503,12 @@ h6 {
       font-size: calc(1.25rem + 0.25 * (100vw - 20rem) / 43.75);
     }
 }
+}
+
+@media (any-hover: hover) {
+  .item-main-block__image-ibg img:hover {
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);
+  }
 }
